[gd_scene load_steps=5 format=3 uid="uid://uow354j2b4jf"]

[ext_resource type="Texture2D" uid="uid://pv5ohbhbeo8o" path="res://assets/imgs/popup_menu_jogo.webp" id="1_emd0n"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_iyt81"]
[ext_resource type="Texture2D" uid="uid://dxwx0g2y6oiua" path="res://assets/icons/icon_close.svg" id="2_qrhuv"]
[ext_resource type="Texture2D" uid="uid://c8g40lpeffn46" path="res://assets/icons/icon_close_pressionado.webp" id="3_2tfhf"]

[node name="Options Menu" type="CanvasLayer"]
process_mode = 3
layer = 2
visible = false
script = ExtResource("1_iyt81")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.352941)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 296)
scale = Vector2(1.21642, 1.21642)
texture = ExtResource("1_emd0n")

[node name="SliderMusica" type="HSlider" parent="Sprite2D"]
modulate = Color(0.894118, 0.466667, 0, 1)
offset_left = -224.0
offset_top = -20.0
offset_right = 236.0
offset_bottom = -4.0
max_value = 1.0
step = 0.1

[node name="SliderEfeito" type="HSlider" parent="Sprite2D"]
modulate = Color(0.894118, 0.466667, 0, 1)
offset_left = -224.0
offset_top = 79.0
offset_right = 230.0
offset_bottom = 95.0
max_value = 1.0
step = 0.1

[node name="LabelMusica" type="Label" parent="Sprite2D"]
offset_left = -223.607
offset_top = -65.7668
offset_right = -151.607
offset_bottom = -19.7668
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Musica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelEfeito" type="Label" parent="Sprite2D"]
offset_left = -217.03
offset_top = 39.46
offset_right = -72.0303
offset_bottom = 65.4601
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Efeito Sonoros"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTitulo" type="Label" parent="Sprite2D"]
offset_left = -105.0
offset_top = -125.0
offset_right = 106.0
offset_bottom = -94.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Configurações"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="TouchScreenButton" parent="Sprite2D"]
position = Vector2(197.301, -118.38)
scale = Vector2(1.31534, 1.31534)
texture_normal = ExtResource("2_qrhuv")
texture_pressed = ExtResource("3_2tfhf")

[connection signal="value_changed" from="Sprite2D/SliderMusica" to="." method="_on_slider_musica_value_changed"]
[connection signal="value_changed" from="Sprite2D/SliderEfeito" to="." method="_on_slider_efeito_value_changed"]
[connection signal="pressed" from="Sprite2D/Close" to="." method="_on_close_pressed"]
